# screenshare

./: .env  .gitignore  LICENSE  Pipfile  Procfile  README.md  pyproject.toml  requirements.txt
config/: .env.example  asgi.py  routing.py  settings.py  urls.py  wsgi.py
main/: consumers.py  helpers.py  moongazing.py  routing.py  urls.py  views.py
main/templates/: index.html
static/css/: styles.css
