[tool.poetry]
name = "screenshare"
version = "0.3.6"
description = ""
authors = ["Library Innovation Lab <lil@law.harvard.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2,<4.0"
channels = ">=2.1,<3.0"
channels-redis = ">=3.2,<4.0"
django-extensions = ">=3.2,<4.0"
django-environ = "^0.9.0"
requests = "*"
urllib3 = "^1.26.13"
django-redis = "^5.2.0"
slackclient = "^2.9.4"
whitenoise = "^6.2.0"
twisted = "^23.10.0"
ipython = "^8.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
