[tool.poetry]
name = "screenshare"
version = "0.5.0"
description = ""
authors = ["Library Innovation Lab <lil@law.harvard.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2.16"
channels = "^4.1.0"
channels-redis = "^4.2.0"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"
requests = "*"
urllib3 = "^2.2.3"
django-redis = "^5.4.0"
slackclient = "^2.9.4"
whitenoise = "^6.2.0"
twisted = "^24.7.0"
ipython = "^8.11.0"
daphne = "^4.1.2"
pytz = "^2024.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
